# slack-plus-plus

./: .env.sample  Dockerfile  README.md  manifest.yml  pyproject.toml
app/: __main__.py
app/utils/: env.py  logging.py  slack.py  starlette.py
slackpp/: __main__.py  config.py  env.py
slackpp/utils/: logging.py  slack.py  starlette.py
